--- a/src/app.css
+++ b/src/app.css
@@ -4,4 +4,5 @@
 
 :root{
     font-family: Inter, 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    --color-background : white;
 }
